fixed red luxury car overflow

--- a/src/luxury-car-landing-page/style.css
+++ b/src/luxury-car-landing-page/style.css
@@ -83,6 +83,13 @@ a.lines {
   font-size: 2.5rem;
 }
 
+.luxury-car {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
 .luxury-car-display {
   height: 338px;
   width: 80%;
@@ -105,9 +112,9 @@ a.lines {
 
 .luxury-car-display img {
   position: relative;
-  width: 822px;
-  height: 398px;
-  left: 110px;
+  width: 802px;
+  height: 348px;
+  left: 70px;
   top: 46px;
   z-index: 100;
 }
@@ -239,8 +246,7 @@ p.over-five {
 .car-stats-and-video {
   display: flex;
   width: 62.5%;
-  margin-top: 165px;
-  /* margin-left: 494px; */
+  margin-top: 105px;
   justify-content: center;
   align-items: center;
   height: 152px;
@@ -455,7 +461,6 @@ p.service-text {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin-top: 30px;
 }
 
 .featured-cars-heading h4 {
@@ -593,10 +598,7 @@ p.car-photo-info-header {
 
 .trending-products {
   display: flex;
-  position: relative;
   width: 100%;
-  height: 852px;
-  top: 1056px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
